// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`greedyPack gives nothing for nothingg 1`] = `Array []`;

exports[`greedyPack works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 94.64375%;
        height: 46.73180592991914%;
        transform: translateX(5.28296902859407%) translateY(113.41312184571018%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.95,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.95,
      \\"e\\":40,
      \\"f\\":393.26
    }",
    "points": Array [
      Object {
        "x": 40.95,
        "y": 394.21,
      },
      Object {
        "x": 40.95,
        "y": 740.96,
      },
      Object {
        "x": 798.0999999999999,
        "y": 740.96,
      },
      Object {
        "x": 798.0999999999999,
        "y": 394.21,
      },
    ],
    "rotate": -0,
    "scale": 0.95,
    "svgTransform": "matrix(0.95,0,0,0.95,40,393.26)",
    "translateX": 40,
    "translateY": 393.26,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 94.64375%;
        height: 49.80458221024258%;
        transform: translateX(5.28296902859407%) translateY(6.023542145853065%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.95,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.95,
      \\"e\\":40,
      \\"f\\":22.259999999999998
    }",
    "points": Array [
      Object {
        "x": 40.95,
        "y": 23.209999999999997,
      },
      Object {
        "x": 78.94999999999999,
        "y": 392.76,
      },
      Object {
        "x": 774.3499999999999,
        "y": 392.76,
      },
      Object {
        "x": 798.0999999999999,
        "y": 23.209999999999997,
      },
    ],
    "rotate": -0,
    "scale": 0.95,
    "svgTransform": "matrix(0.95,0,0,0.95,40,22.259999999999998)",
    "translateX": 40,
    "translateY": 22.259999999999998,
  },
]
`;

exports[`greedyPack works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 69.7375%;
        height: 34.43396226415094%;
        transform: translateX(50.356214994512214%) translateY(106.88678208206453%) rotate(21.999999999999996deg)
      ",
    "matrix": "{
      \\"a\\":0.6490286981967511,
      \\"b\\":0.2622246153911384,
      \\"c\\":-0.2622246153911384,
      \\"d\\":0.6490286981967511,
      \\"e\\":280.93732345438366,
      \\"f\\":273.0957282196748
    }",
    "points": Array [
      Object {
        "x": 281.32412753718927,
        "y": 274.0069815332627,
      },
      Object {
        "x": 185.61214291942375,
        "y": 510.9024563750769,
      },
      Object {
        "x": 702.8880153822344,
        "y": 719.8954748418141,
      },
      Object {
        "x": 798.5999999999999,
        "y": 483,
      },
    ],
    "rotate": 21.999999999999996,
    "scale": 0.7,
    "svgTransform": "matrix(0.6490286981967511,0.2622246153911384,-0.2622246153911384,0.6490286981967511,280.93732345438366,273.0957282196748)",
    "translateX": 280.93732345438366,
    "translateY": 273.0957282196748,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 69.73750000000001%;
        height: 36.69811320754717%;
        transform: translateX(43.02067096216107%) translateY(-0.0044473268878248515%) rotate(1.0000000000002647deg)
      ",
    "matrix": "{
      \\"a\\":0.6998933866094739,
      \\"b\\":0.012216684506098457,
      \\"c\\":-0.012216684506098457,
      \\"d\\":0.6998933866094739,
      \\"e\\":240.01232329789664,
      \\"f\\":-0.012110071115547072
    }",
    "points": Array [
      Object {
        "x": 240.70000000000002,
        "y": 0.7000000000000253,
      },
      Object {
        "x": 263.94344519150667,
        "y": 273.4471947713293,
      },
      Object {
        "x": 776.2654041896415,
        "y": 282.38980782979337,
      },
      Object {
        "x": 798.5150291277506,
        "y": 10.436697551360496,
      },
    ],
    "rotate": 1.0000000000002647,
    "scale": 0.7000000000000001,
    "svgTransform": "matrix(0.6998933866094739,0.012216684506098457,-0.012216684506098457,0.6998933866094739,240.01232329789664,-0.012110071115547072)",
    "translateX": 240.01232329789664,
    "translateY": -0.012110071115547072,
  },
]
`;

exports[`greedyPack works 3`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 94.64375%;
        height: 46.73180592991914%;
        transform: translateX(5.28296902859407%) translateY(113.41312184571018%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.95,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.95,
      \\"e\\":40,
      \\"f\\":393.26
    }",
    "points": Array [
      Object {
        "x": 40.95,
        "y": 394.21,
      },
      Object {
        "x": 40.95,
        "y": 740.96,
      },
      Object {
        "x": 798.0999999999999,
        "y": 740.96,
      },
      Object {
        "x": 798.0999999999999,
        "y": 394.21,
      },
    ],
    "rotate": -0,
    "scale": 0.95,
    "svgTransform": "matrix(0.95,0,0,0.95,40,393.26)",
    "translateX": 40,
    "translateY": 393.26,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 94.64375%;
        height: 49.80458221024258%;
        transform: translateX(5.28296902859407%) translateY(4.015694763902043%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.95,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.95,
      \\"e\\":40,
      \\"f\\":14.84
    }",
    "points": Array [
      Object {
        "x": 40.95,
        "y": 15.79,
      },
      Object {
        "x": 78.94999999999999,
        "y": 385.34,
      },
      Object {
        "x": 774.3499999999999,
        "y": 385.34,
      },
      Object {
        "x": 798.0999999999999,
        "y": 15.79,
      },
    ],
    "rotate": -0,
    "scale": 0.95,
    "svgTransform": "matrix(0.95,0,0,0.95,40,14.84)",
    "translateX": 40,
    "translateY": 14.84,
  },
]
`;
